# rules_python_2283_mvce

./: .bazelrc  BUILD  MODULE.bazel  README.md  main.py  pre-commit.sh  requirements.txt  rules_python.patch
